# sharme

./: CMakeLists.txt  README  download.html  index.html  mailing.html  page.html  poole.css  status.html
cmake/: toolchain-linux.cmake  toolchain-mingw32.cmake
documentation/: build.html  developer.html  index.html  user.html
include/: arc4.h  colorspace.h  debug.h  keyb.h  mouse.h  resize.h  screenshot.h  screenshot_x.h  socket.h
lib/: CMakeLists.txt  arc4.c  colorspace.c  debug.c  keyb.c  keyb_ms.c  keyb_x.c  mouse.c  mouse_ms.c  mouse_x.c  resize.c  screenshot.c  screenshot_ms.c  screenshot_x.c  socket.c
lib/smoke/: comp.sh  smokecodec.c
site/: download.html  index.html  mailing.html  page.html
site/documentation/: build.html
site/input/: download.md  index.md  status.md
site/input/documentation/: build.md  developer.md  index.md  user.md
site/input/sharme/: download.md  index.md  mailing.md  poole.css  status.md
site/input/sharme/documentation/: build.md  developer.md  index.md  user.md
src/: CMakeLists.txt  client.cpp  client.h  common.cpp  common.h  enums.h  fl_thread.h  sharme.cpp  sharme_config.h.in  sharme_ui.cxx  sharme_ui.fl  sharme_ui.h  viewer.cpp  viewer.h
utils/: Makefile  README  makegui.c
