add_library(resize resize.c)
add_library(debug_ debug.c)
add_library(colorspace colorspace.c)
add_library(smoke smoke/smokecodec.c)
add_library(socket socket.c)
add_library(screenshot screenshot.c)
add_library(keyb keyb.c)
add_library(mouse mouse.c)
add_library(arc4 arc4.c)

if(WINDOWS)
  target_link_libraries (socket wsock32)
  target_link_libraries (socket ws2_32)
endif(WINDOWS)

if(UNIX)
  find_package(X11 REQUIRED)
  if(NOT X11_XTest_FOUND)
    message(FATAL_ERROR "Could not find X11 XTest extension")
  endif(NOT X11_XTest_FOUND)
  include_directories(${X11_INCLUDE_DIRS})
  include_directories(${X11_XTest_INCLUDE_PATH})
  target_link_libraries(mouse ${X11_LIBRARIES})
  target_link_libraries(mouse ${X11_XTest_LIB})
endif(UNIX)

find_package(JPEG REQUIRED)
#include_directories(${JPEG_INCLUDE_DIRS})
#set(LIBS ${LIBS} ${JPEG_LIBRARIES})

target_link_libraries (smoke jpeg)
