set (FLTK_SKIP_IMAGES true)
set (FLTK_SKIP_OPENGL true)
set (FLTK_SKIP_FORMS true)
set (FLTK_SKIP_FLUID true)

find_package(FLTK REQUIRED)
if(UNIX)
    find_package (Threads REQUIRED)
    find_package (X11 REQUIRED)
endif(UNIX)

add_library(client client.cpp)
add_library(viewer viewer.cpp)

add_executable (sharme sharme.cpp sharme_ui.cxx common)
target_link_libraries (sharme client)
target_link_libraries (sharme viewer)
target_link_libraries (sharme debug_)
target_link_libraries (sharme resize)
target_link_libraries (sharme debug_)
target_link_libraries (sharme colorspace)
target_link_libraries (sharme smoke)
target_link_libraries (sharme socket)
target_link_libraries (sharme screenshot)
target_link_libraries (sharme mouse)
target_link_libraries (sharme keyb)
target_link_libraries (sharme arc4)
target_link_libraries (sharme ${FLTK_LIBRARIES})
#if(WINDOWS)
#    target_link_libraries (sharme ${FLTK_LIBRARIES})
#endif(WINDOWS)
if(UNIX)
    #target_link_libraries (sharme /home/rpedroso/Downloads/fltk-1.3.0/lib/libfltk.a)
    target_link_libraries (sharme ${CMAKE_THREAD_LIBS_INIT})
endif(UNIX)
